<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSplashLayout"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_ad_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/adImg"
            style="@style/TestApplication.AdAttribution"
            android:layout_margin="2dp"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toTopOf="@+id/ad_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintRight_toLeftOf="@+id/ad_stars"
            app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/ad_headline"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ad_app_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/this_that"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/ad_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="30dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ad_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
            app:layout_constraintTop_toTopOf="@+id/ad_app_icon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ad_advertiser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="bottom"
            android:text="@string/sub_title"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/ad_headline"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ad_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ad_body_discription"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ad_call_to_action"
            app:layout_constraintStart_toStartOf="@+id/ad_price"
            app:layout_constraintTop_toBottomOf="@+id/ad_price"
            app:layout_constraintVertical_bias="0.0" />

        <RatingBar
            android:id="@+id/ad_stars"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/adImg"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/ad_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingEnd="5dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/ad_stars"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/ad_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/ad_store"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/ad_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ad_price"
            app:layout_constraintTop_toTopOf="@+id/ad_price" />

        <Button
            android:id="@+id/ad_call_to_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/install_string"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adImg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.gms.ads.nativead.NativeAdView>
